# tallyman

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  change-log.md  pyproject.toml
.claude/: settings.json  settings.local.json
.cursor/rules/: coding-guidelines.mdc  project-rules.mdc
plans/001-tallyman-cli-tool/: 00-plan-introduction.plan.md  phase-01-project-foundation.plan.md  phase-02-core-counting-engine.plan.md  phase-03-configuration-and-tui.plan.md  phase-04-output-and-formatting.plan.md
plans/002-specs-category/: 00-plan-introduction.plan.md  phase-01-language-config-walker.plan.md  phase-02-tui-s-key.plan.md  phase-03-aggregator-display-tests.plan.md
plans/003-image-export/: 00-plan-introduction.plan.md
plans/004-nested-config-discovery/: 00-plan.md
src/tallyman/: __init__.py  __main__.py  aggregator.py  cli.py  config.py  counter.py  display.py  image.py  languages.py  walker.py
src/tallyman/fonts/: __init__.py
src/tallyman/tui/: setup_app.py
tests/: test_aggregator.py  test_config.py  test_counter.py  test_image.py  test_languages.py  test_walker.py
