[project]
name = "tallyman"
version = "0.1.0"
description = "A command-line tool that summarizes codebase size by language."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
tallyman = "tallyman.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tallyman"]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
