[project]
name = "tallyman-metrics"
version = "0.2.1"
description = "A command-line tool that summarizes codebase size by language."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "pathspec>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/mikeckennedy/tallyman"
Documentation = "https://github.com/mikeckennedy/tallyman#readme"
Issues = "https://github.com/mikeckennedy/tallyman/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
tallyman = "tallyman.cli:main"
tallyman-metrics = "tallyman.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tallyman"]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
